--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.2",
     "nodemon": "^3.1.9",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   }
 }
