--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@clerk/clerk-sdk-node": "^5.1.6",
     "@clerk/express": "^1.3.31",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -25,6 +27,7 @@
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "razorpay": "^2.9.6",
     "socket.io": "^4.8.1",
