--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,14 +21,18 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "global": "^4.4.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.469.0",
+    "nodemailer": "^6.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.3",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
