new chat update

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb+srv://dakshgoswami95:Daksh987@cluster0.m6z4j.mongodb.net/beatbuzz?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://dakshgoswami95:Daksh987@cluster0.m6z4j.mongodb.net/beatbuzz?retryWrites=true&w=majority&appName=Cluster0
 ADMIN_EMAIL=dakshgoswami95@gmail.com
 
 CLOUDINARY_CLOUD_NAME=dfth6rlsd
