--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-VITE_BACKEND_URL = http://localhost:5000
+VITE_BACKEND_URL =https://beatbuzz.onrender.com
 VITE_RAZORPAY_KEY_ID = rzp_test_kzKSGGpfvtbVhi
